# breast-ai-system

./: .env.example  .gitignore  ADVANCED_DIAGNOSTICS.md  ADVANCED_FEATURES_IMPLEMENTATION.md  BREAST_AI_SYSTEM_CLEANUP_SUMMARY.md  CODE_COMMENTS_GUIDE.md  DEVELOPMENT.md  FEATURES_SUMMARY.md  FEATURE_IMPLEMENTATION_REPORT.md  FRONTEND_OPTIMIZATION_SUMMARY.md  FRONTEND_TYPE_FIX_GUIDE.md  GITHUB_COMPARISON_AND_OPTIMIZATION.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  INSTALL.md  Makefile  README.md  README_ENV_SETUP.md  check_syntax.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quickstart.sh  requirements-minimal.txt  requirements.txt  setup_env.ps1
ai_chat/: README.md  requirements.txt  service.py
app/: __init__.py  main.py
backend/: Dockerfile  requirements.txt
config/: default.env
data/: DATA_COLLECTION_SUMMARY.md  README_datasets.md
docs/: ACTION_ITEMS_TRACKER.md  API_TESTING.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COPILOT_COMMAND_INTEGRATION.md  COPILOT_TODO_IMPLEMENTATION.md  DATABASE_SETUP.md  DATA_FLOW_ANALYSIS.md  DATA_MANAGEMENT_BACKEND_COMPLETE.md  DATA_MANAGEMENT_COMPLETE.md  DATA_MANAGEMENT_SETUP.md  DB_INIT_SUMMARY.md  DEVELOPMENT_COMPLETE.md  DOCUMENTATION_INDEX.md  EXECUTIVE_BRIEFING.md  FEATURES_SUMMARY.md  FINAL_SUMMARY.md  FRONTEND_COMPLETE.md  IMAGING_TCM_FINAL_SUMMARY.md  IMAGING_TCM_INTEGRATION_EVIDENCE_BASED.md  IMAGING_TCM_RULES_EXTENDED.md  KIMI_FINETUNE_IMPLEMENTATION.md  KNOWLEDGE_BASE_COMPLETE.md  MEDICAL_COPILOT_ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  TCM_FIX_SUMMARY.md  TCM_IMAGING_IMPLEMENTATION_SUMMARY.md  TCM_IMAGING_MODULE_README.md  TCM_IMAGING_TEST_REPORT.md  TCM_INTEGRATION_ANALYSIS_AND_FIX.md  WEIGHT_SOURCE.md  WEIGHT_SUMMARY.md
frontend/: .env.example  MODULE_GUIDE.md  MODULE_REFACTOR_REPORT.md  README.md  SYSTEM_CHECK.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
models/: README_weights.md
scripts/: init.sh  run.sh
test/: ISSUE_TRACKING_AND_FIXES.md  ROLE_PLAY_TEST_SCENARIOS.md
tests/: test_diagnosis.py  (+1 more)
(+277 files in other folders)
