[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breast-ai-system"
version = "3.1.0"
description = "乳腺超声 AI 辅助诊断系统 - AI-powered breast cancer diagnosis assistance system"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "AI Medical Team", email = "ai-medical@example.com"}
]
keywords = [
    "breast-cancer",
    "ultrasound",
    "ai-diagnosis",
    "medical-imaging",
    "deep-learning",
    "birads"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncmy>=0.2.9",
    "numpy>=1.26.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=10.4.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "flake8>=7.1.0",
    "mypy>=1.10.0",
]
docs = [
    "sphinx>=7.3.0",
    "mkdocs>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/jwxys/breast-ai-system"
Documentation = "https://github.com/jwxys/breast-ai-system/wiki"
Repository = "https://github.com/jwxys/breast-ai-system"
Issues = "https://github.com/jwxys/breast-ai-system/issues"

[project.scripts]
breast-ai = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
